# fed_ai

./: README.md  compose.yml  main.py  pyproject.toml
fed_ai/: client_app.py  server_app.py  task.py
scripts/: example_train.py
tests/: test_fed_ai.py
